--- a/workshop_app/static/workshop_app/css/base.css
+++ b/workshop_app/static/workshop_app/css/base.css
@@ -2,12 +2,12 @@
     z-index: 1000;
 }
 .base-content {
-    padding-top: calc(64px + var(--space-4));
-    padding-bottom: 5em;
+    padding-top: 0;
+    padding-bottom: 4em;
 }
 
 @media (max-width: 767px) {
     .base-content {
-        padding-top: calc(56px + var(--space-4));
+        padding-top: 0;
     }
 }
