--- a/workshop_app/static/workshop_app/css/footer.css
+++ b/workshop_app/static/workshop_app/css/footer.css
@@ -98,7 +98,7 @@
     background: #003366;
     color: #FFFFFF;
     text-align: center;
-    padding: 48px 16px;
+    padding: 32px 16px;
     position: relative;
     overflow: hidden;
 }
